packages/cashc/test/compiler/ParseError/for_loop_missing_condition.cash
contract ForLoopMissingCondition() {
    function spend() {
        for (int i = 0; ; i = i + 1) {
            require(i < 3);
        }
    }
}
